--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
   <head>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/assets/images/geovanna-favicon.png">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/images/geovanna-favicon.png">
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery/jquery.js"></script>
   </body>
 </html>
